--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,13 +33,24 @@
           <select 
             id="secret" 
             class="form-control"
-            ngModel
+            [ngModel] = "defaultQuestion"
             name="secret"
             >
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
+
+        <div class="form-group">
+          <textarea id="questionAnswer" 
+          rows="3" 
+          name="questionAnswer"
+          [(ngModel)] = "answer" 
+          class="form-control"></textarea>
+        </div>
+        
+        <p>Your reply: {{ answer }} </p>
+
         <button class="btn btn-primary" type="submit"
         [disabled] = "!f.valid">Submit</button> <!--javascripit submit event -->
       </form>
