--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)= "onSubmit(f)" #f="ngForm"> <!--submit form method, give me access to form, ngNativeValidate-->
-        <div id="user-data">
+        <div id="user-data" 
+        ngModelGroup="userData"
+        #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -28,6 +30,7 @@
               <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid email!</span>
           </div>
         </div>
+        <p *ngIf= "!userData.valid && userData.touched">User data is invalid!</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select 
@@ -47,9 +50,13 @@
           name="questionAnswer"
           [(ngModel)] = "answer" 
           class="form-control"></textarea>
-        </div>
-        
+        </div>        
         <p>Your reply: {{ answer }} </p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label >
+            <input type="radio" name="gender" ngModel [value]="gender" required> {{gender}}
+          </label>
+        </div>
 
         <button class="btn btn-primary" type="submit"
         [disabled] = "!f.valid">Submit</button> <!--javascripit submit event -->
