--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           </div>
           <button class="btn btn-default" 
           type="button"
-          (click)="suggestUserName()">Suggest an Username</button>
+          (click)="suggestUserName()">Suggest a Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input 
@@ -65,4 +65,15 @@
       </form>
     </div>
   </div>
+      <hr>
+<div class="row" *ngIf="submittedProperty">
+<div class="col-xs-12">
+<h3>Your Data</h3>
+<p>Username: {{user.username}}</p>
+<p>Mail: {{user.mail}} </p>
+<p>Secret Question:  {{user.secretQuestion}}</p>
+<p>Answer: {{user.answer}}</p>
+<p>Gender: {{user.gender}}</p>
+</div>
+</div>
 </div>
